--- a/myeslib2-example-api/pom.xml
+++ b/myeslib2-example-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.myeslib</groupId>
         <artifactId>myeslib2</artifactId>
-        <version>0.0.42-SNAPSHOT</version>
+        <version>0.0.47-SNAPSHOT</version>
     </parent>
 
     <artifactId>myeslib2-example-api</artifactId>
@@ -25,12 +25,13 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.auto.value</groupId>
-            <artifactId>auto-value</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
