--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,11 @@
 
     <groupId>org.myeslib</groupId>
     <artifactId>myeslib2</artifactId>
-    <version>0.0.42-SNAPSHOT</version>
+    <version>0.0.47-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>myeslib2</name>
     <description>CQRS and event sourcing java library</description>
     <url>https://github.com/rodolfodpk/myeslib2</url>
-
-    <issueManagement>
-        <url>https://github.com/rodolfodpk/myeslib2/issues</url>
-        <system>GitHub Issues</system>
-    </issueManagement>
 
     <licenses>
         <license>
@@ -27,7 +22,7 @@
         <url>https://github.com/rodolfodpk/myeslib2</url>
         <connection>scm:git:git://github.com/rodolfodpk/myeslib2.git.git</connection>
         <developerConnection>scm:git:git@github.com:rodolfodpk/myeslib2.git</developerConnection>
-    </scm>
+    </scm>    
 
     <developers>
         <developer>
@@ -122,11 +117,6 @@
                 <version>1.7.8</version>
             </dependency>
             <dependency>
-                <groupId>net.jcip</groupId>
-                <artifactId>jcip-annotations</artifactId>
-                <version>1.0</version>
-            </dependency>
-            <dependency>
                 <groupId>org.jdbi</groupId>
                 <artifactId>jdbi</artifactId>
                 <version>2.55</version>
@@ -147,33 +137,36 @@
                 <version>2.2.5</version>
             </dependency>
             <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>1.4.178</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>2.3.1</version>
+                <groupId>com.google.inject</groupId>
+                <artifactId>guice</artifactId>
+                <version>${guice.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
+
+            <!-- Gson -->
             <dependency>
-                <groupId>com.google.auto.value</groupId>
-                <artifactId>auto-value</artifactId>
-                <version>1.0</version>
-                <scope>provided</scope>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.3.1</version>
             </dependency>
             <dependency>
-                <groupId>com.google.inject</groupId>
-                <artifactId>guice</artifactId>
-                <version>${guice.version}</version>
+                <groupId>org.immutables</groupId>
+                <artifactId>value</artifactId>
+                <version>2.0.13</version>
+                <scope>provided</scope>
             </dependency>
 
             <!-- Test -->
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>1.4.178</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
